--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Footer -->
     <footer id="footer">
       <ul class="icons">
-        <li><a href="https://www.facebook.com/groups/2345647952222235/" class="icon fa-facebook">
+        <li><a href="https://www.facebook.com/groups/2345647952222235/" class="icon fa-facebook-square">
             Facebook club
           </a></li>
         <li>
