--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <header id="header" class="alt">
     <div class="inner">
       <h1>DL Note</h1>
-      <p>Develop by Dean Lin.</p>
-      <p>Presenter by Baogo.</p>
+      <p>Developer : Dean Lin.</p>
+      <p>Presenter : Baogo.</p>
+      <p>credit : 周瑞祥, 簡銘宣, 李柏翰, 黃大鎔, 殷欣.</p>
     </div>
   </header>
 
