--- a/index.html
+++ b/index.html
@@ -29,18 +29,19 @@
         感謝您
       </h2>
       <p>
-        DL Note can let you make almost unlimited miracle.
-        Download app first <br />
-        DL Note 可以讓你創造無限奇蹟，
-        趕緊下載吧 <br />
-        <ul class="actions">
-          <li><a href="https://play.google.com/store/apps/details?id=com.dean.skechMagic" class="button big">
-              <span class="icon fa-android"></span>download
-            </a></li>
-          <li><a href="https://apps.apple.com/us/app/dl-note/id1473095012" class="button big">
-              <span class="icon fa-apple"></span>download
-            </a></li>
-        </ul>
+        DL Note can let you make almost unlimited miracle.Download app first
+      </p>
+      <p>
+        DL Note 可以讓你創造無限奇蹟，趕緊下載吧
+      </p>
+      <ul class="actions">
+        <li><a href="https://play.google.com/store/apps/details?id=com.dean.skechMagic" class="button big">
+            <span class="icon fa-android"></span>download
+          </a></li>
+        <li><a href="https://apps.apple.com/us/app/dl-note/id1473095012" class="button big">
+            <span class="icon fa-apple"></span>download
+          </a></li>
+      </ul>
     </section>
 
     <!-- Items -->
@@ -50,7 +51,7 @@
           <a href="https://youtu.be/-Onbg9xVWjU"><img src="images/chinese.jpg" alt="" /></a>
           <h3>中文教學</h3>
         </header>
-        <p>請看完教學片後再進行自己的創意</p>        
+        <p>請看完教學片後再進行自己的創意</p>
       </article>
       <article class="item">
         <header>
