--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="inner">
       <h1>DL Note</h1>
       <p>Developer : Dean Lin.</p>
-      <p>Presenter : Baogo.</p>
+      <p>Performer : Baogo.</p>
       <p>credit : 周瑞祥, 簡銘宣, 李柏翰, 黃大鎔, 殷欣.</p>
     </div>
   </header>
@@ -58,7 +58,7 @@
           <a href="https://youtu.be/h8UvHSl45Vw"><img src="images/english.jpg" alt="" /></a>
           <h3>English tutorial</h3>
         </header>
-        <p></p>Please watch the tutorial video before you operate.</p>
+        <p></p>Please watch the tutorial video before you performance.</p>
       </article>
     </section>
     <!-- Footer -->
